--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -93,11 +93,11 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation
 ```
 
 ### Effects of MDC and TARC alone on aggregation in PRP
-MDC and TARC were applied on their own in PRP to see whether in the presence of plasma these chemokines could activate platelets. MDC and TARC elicited 38 % (SEM 10 %) and 35 % (SEM 10 %) aggregation respectively. PAR1-AP (1uM) induced 50 % (SEM 14 %) aggregation and 10 uM ADP induced 78 % (SEM 3.5) aggregation.
+MDC and TARC were applied on their own in PRP to see whether in the presence of plasma these chemokines could activate platelets. MDC and TARC elicited 38 % (SEM 10 %) and 35 % (SEM 10 %) aggregation respectively. PAR1-AP (1uM) induced 50 % (SEM 14 %) aggregation and 10 uM ADP induced 78 % (SEM 3.5 %) aggregation.
 
 (ref:scaption-plate-agg-chemokines) The effect of the chemokines MDC and TARC alone on aggregation in platelet rich plasma using plate aggregation
 (ref:caption-plate-agg-chemokines) **The effect of the chemokines MDC and TARC alone on aggregation in platelet rich plasma using plate aggregation**. A-C) PRP supplemented with apyrase was stimulated with 1uM PAR1-AP, 10uM ADP, 200ng/mL MDC, or 200 ng/mL TARC for 5 mins using a plate shaker. Readings were taken with a plate reader. 
-```{r plate-agg-chemokines, out.width="100%", echo = FALSE, fig.cap="(ref:caption-plate-agg-chemokines)", fig.align = "center", fig.scap= "(ref:scaption-plate-agg-chemokines)"}
+```{r plate-agg-chemokines, out.width="85%", echo = FALSE, fig.cap="(ref:caption-plate-agg-chemokines)", fig.align = "center", fig.scap= "(ref:scaption-plate-agg-chemokines)"}
 include_graphics(path = "figure/Chemokines/PRP_MDC_TARC_plate_agg.png", dpi = NA)
 
 ```
@@ -228,7 +228,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_inhibitors_aggregation_tr
 
 ### Two sample Mendelian randomisation to assess the role of MDC (CCL22) and TARC (CCL17) in disease
 
-To estimate potential causal relationships bewteen circulating levels of MDC and TARC and disease, a two sample MR was performed using pQTL data for these chemokines and available disease outcome data. Results are displayed for estimates where p<0.05, however due to multiple testing, the p-value threshold was adjusted to 2.2x10^-4^. Results are presented as the change in outcome per SD higher protein. There was evidence from the Wald ratio MR that higher MDC had a causal effect on three outcomes: high cholesterol (Effect size = 0.22 SD, SE = 0.02, p=2.2x10^-26^), DVT (Effect size = 0.22, SE 0.021, p=2.2x10^-26^) and pulmonary embolism (Effect size = 0.33, SE 0.08, p=2.0x10^-5^). A colocalsation analysis can be used to try to distinguish whether causal effects are arising due to linkage disequilibrium[@Zheng2020]. The association between MDC and self-reported high cholesterol had strong evidence (posterior probability > 0.8) of colocalization[@Zheng2020], suggesting that these two traits share the same causal variant. There was not strong evidence for an effect of higher levels of TARC on any of the included outcomes. Results of the two sample MR are shown for MDC and TARC in tables \@ref(tab:MDC-disease-MR) and \@ref(tab:TARC-disease-MR).
+To estimate potential causal relationships bewteen circulating levels of MDC and TARC and disease, a two sample MR was performed using pQTL data for these chemokines and available disease outcome data. Results are displayed for estimates where p<0.05, however due to multiple testing, the p-value threshold was adjusted to 2.2x10^-4^. Results are presented as the change in outcome per SD higher protein. There was evidence from the Wald ratio MR that higher MDC had a causal effect on three outcomes: high cholesterol (Effect size = 0.22 SD, SE = 0.02, p=2.2x10^-26^), DVT (Effect size = 0.22, SE 0.021, p=2.2x10^-26^) and pulmonary embolism (Effect size = 0.33, SE 0.08, p=2.0x10^-5^). There was not strong evidence for an effect of higher levels of TARC on any of the included outcomes. Results of the two sample MR are shown for MDC and TARC in tables \@ref(tab:MDC-disease-MR) and \@ref(tab:TARC-disease-MR).
 
 (ref:caption-MDC-disease-MR) Estimates for the effect of MDC on disease outcomes using two sample Mendelian randomisation
 ```{r MDC-disease-MR,  echo=FALSE}
@@ -279,7 +279,7 @@ Platelets express chemokine receptors as they are also key cells in inflammation
 
 As well as functional effects, this chapter aimed to assess whether effects are due to the CCR4 receptor and the downstream signalling involved. It has been reported that MDC inhibits calcium currents in HEK293 cells and barium currents dorsal root ganglia neurones and is therefore G~i/o~ coupled[@Oh2002]. MDC and TARC were not able to reduce VASP phosphorylation induced by PGE1, suggesting that the effects are not via G~i/o~ in platelets. It is possible that this experiment was not sensitive enough to detect the reduction in VASP phosphorylation, as ADP did not reduce VASP levels as much as previous reports[@Hezard2005]. Another study suggested that CCR4 is coupled to G~q~ due to the calcium response observed by MDC[@Kowalska2000]. Inhibiting G~q~ coupling in the current study inhibited the aggregation induced by MDC. It is therefore likely that CCR4 couples to G~q~.
 
-MDC and TARC have been implicated in CVD such as atherosclerosis[@Weber2004], but experiments focusing on the effect of MDC and TARC on platelet function have not used genetic epidemiology to explore whether genetic variants which lead to alterations in the levels of circulating MDC and TARC in the plasma are associated with an increased risk of disease. As MDC and TARC can activate platelets, the effect of MDC and TARC on disease was explored using two sample MR. The SNP that was associated with levels of MDC, rs77542162, was also associated with increased risk of DVT and pulmonary embolism. This effect may occur due to increased platelet priming by higher levels of MDC. Patients at risk of developing VTE have a hypercoagulant state and are prescribed anticoagulants to reduce the risk. Experiments indicated that MDC could not potentiate PS exposure, a marker of coagulation, therefore suggesting that MDC does not increaes the risk through an increase in coagulation. Further experiments are required to determine how MDC could mediate the risk of VTE. Despite the evidence for a causal effect, it is possible that this SNP could affect the outcome through routes other than through the exposure (horizontal pleiotropy). For example, the SNP could also be associated with increased in number of red blood cells, thereby increased risk of VTE. This is also reflected by other outcomes being related to increased levels of MDC such as forced vital capacity (FVC). As there is only one SNP, sensitivity analyses cannot be performed to test this. Further analyses such as a colocalisation analysis could help determine whether the relationship between MDC and DVT/PE is causal as this method estimates whether an exposure and an outcome share a causal top signal in a particular genomic region[@Giambartolomei2014].
+MDC and TARC have been implicated in CVD such as atherosclerosis[@Weber2004], but experiments focusing on the effect of MDC and TARC on platelet function have not used genetic epidemiology to explore whether genetic variants which lead to alterations in the levels of circulating MDC and TARC in the plasma are associated with an increased risk of disease. As MDC and TARC can activate platelets, the effect of MDC and TARC on disease was explored using two sample MR. The SNP that was associated with levels of MDC, rs77542162, was also associated with increased risk of DVT and pulmonary embolism. This effect may occur due to increased platelet priming by higher levels of MDC. Patients at risk of developing VTE have a hypercoagulant state and are prescribed anticoagulants to reduce the risk. Experiments indicated that MDC could not potentiate PS exposure, a marker of coagulation, therefore suggesting that MDC does not increaes the risk through an increase in coagulation. Further experiments are required to determine how MDC could mediate the risk of VTE. Despite the evidence for a causal effect, it is possible that this SNP could affect the outcome through routes other than through the exposure (horizontal pleiotropy). For example, the SNP could also be associated with increased in number of red blood cells, thereby increased risk of VTE. This is also reflected by other outcomes being related to increased levels of MDC such as forced vital capacity (FVC). As there is only one SNP, sensitivity analyses cannot be performed to test this. Colocalisation analyses can help determine whether the relationship between MDC and an outcome is causal as this method estimates whether an exposure and an outcome share a causal top signal in a particular genomic region[@Giambartolomei2014]. The association between MDC and self-reported high cholesterol had strong evidence (posterior probability > 0.8) of colocalization[@Zheng2020], suggesting that these two traits share the same causal variant. This requires further investigation.
 
 This chapter has provided evidence for a an effect of MDC and TARC on platelet function and indicated possible mechanisms of effect. As mentioned in the introduction of the current chapter, there is evidence that patients with obesity have higher circulating levels of MDC[@Safa2016], however the effect of BMI and levels of these chemokines needs to assessed in a larger cohort and using a causal framework. The SOMAScan proteomics panel detects these circulating chemokines, therefore further exploration of the effect of BMI on these chemokines will be presented in Chapter \@ref(BMI-protein-MR) by using one sample MR and Chapter \@ref(BMI-protein-RCT) which utilises a weight loss RCT.
 
