--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -84,7 +84,7 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/dendrogram.pdf", dpi = NA)
 The association between BMI and specific platelet proteins were also explored. Here, GO pathways which include the term "platelet" were selected in AmiGO2 http://amigo.geneontology.org/ (Supplementary Table 1). These pathways were then searched in BioMart https://www.ensembl.org/biomart/martview/afd335dff2c91c86501d3f1f77b8b805, to provide a list of all the proteins involved in these platelet pathways (Supplementary Table 2). Unique proteins in Supplementary Table 2 were searched within the results to extract the estimate for BMI on platelet proteins. As the chemokines MDC and TARC were explored in the previous chapter and displayed an evidence for an effect on platelet function, and MDC was implicated in DVT in an MR framework, the specific effects of BMI on MDC and TARC were looked up.
 
 ### Sensitivity analysis
-As a sensitivity analysis, for proteins which had evidence for a BMI effect, a two sample MR was performed using available summary statistics on MRBase[@Hemani2018]. The summary statistics for BMI were obtained from Yengo et al., using the 656 near-independent SNPs associated with BMI in a population of 681275 individuals (the same ones used for the genetic risk score)[@Yengo2018]. Summary statistics for proteins were obtained from the GWAS performed by Sun et al.[@Sun2018], where protein levels were measured in SD units in a total of 3301 participants. A total of 637 of the BMI SNPs were present in the protein summary statistics. The inverse-variance weighted (IVW) method, weighted median and weighted mode MR methods were used to estimate the causal effect using the TwoSampleMR R package[@Burgess2016; @Hemani2018]. The MR Egger method was also used to estimate the causal effect[@Burgess2017]; this methods also tests for directional pleiotropy. Pleiotropy was determined usng the MR Egger intercept and heterogeneity was examined using Cochran's Q statisitc[@Burgess2017; @Greco2015]. Cis protein quantitative trait loci (pQTLs) for each protein were identified[@Sun2018] and any BMI SNPs within ± 1 Mb of these loci were removed.  The two sample MR estimate was recalculated without these BMI SNPs to determine whether effects still remain after removal of SNPs near the genes which encode the proteins and, where possible, the MR estimates for each protein were compared.
+A sensitivity analysis was performed to test whether any BMI-protein effects arise because the SNPs used for the for the BMI GRS are located near the genes which encode the protein outcomes. For proteins which had evidence for a BMI effect, a two sample MR was performed using available summary statistics on MRBase[@Hemani2018]. The summary statistics for BMI were obtained from Yengo et al., using the 656 near-independent SNPs associated with BMI in a population of 681275 individuals (the same ones used for the genetic risk score)[@Yengo2018]. Summary statistics for proteins were obtained from the GWAS performed by Sun et al.[@Sun2018], where plasma protein levels were measured in SD units in a total of 3301 participants. The overlap between these two GWAS is 0.05% of UK Biobank participants. A total of 637 of the BMI SNPs were present in the protein summary statistics. The inverse-variance weighted (IVW) method, weighted median and weighted mode MR methods were used to estimate the causal effect using the TwoSampleMR R package[@Burgess2016; @Hemani2018]. These methods can be limited by the limited heritability of the protein outcomes, therefore the effects were compared with the one sample MR results. The MR Egger method was also used to estimate the causal effect[@Burgess2017]; this method also tests for directional pleiotropy. Pleiotropy was explored using the MR Egger intercept and heterogeneity was examined using Cochran's Q statisitc[@Burgess2017; @Greco2015]. Cis protein quantitative trait loci (pQTLs) for each protein were identified[@Sun2018] and any BMI SNPs within ± 1 Mb of these loci were removed.  The two sample MR estimate was recalculated without these BMI SNPs to determine whether effects still remain after removal of SNPs near the genes which encode the proteins and, where possible, the MR estimates for each protein were compared.
 
 ### Enrichment analysis
 To investigate whether any protein groups showed a particularly strong relationship with BMI and disease (signal detection), protein features were clustered for further analysis. First, a principal component analysis (PCA; prcomp() function from the R "stats" package) on the proteins, not the individuals, was performed on the "pre-adjusted" (see above) dataset (Figure \@ref(fig:PCs)A-D). The top "n" PC eigenvectors, as identified by a scree plot of the PCA eigenvalues (Figure \@ref(fig:PCs)E), were carried forward into an unsupervised k-means analysis (kmeans() function from the R "stats" package). Nineteen k-means analyses were run altering the value of k (number of clusters) from two to 20. To identify an appropriate number of protein clusters (k) a scree like plot was generated (Figure \@ref(fig:PCs)F). Here the variance explained by clusters was plotted, for each k, as estimated as the sum of squares explained by clusters (betweenness) over the total sums of squares, and looked for the smallest k with the maximum variance explained (a plateau). In summary, a data reduction method (PCA) was used to identify major axes (PCs) of the protein data that were then utilised in a machine learning clustering algorithm (k-means) to identify clusters of proteins that share abundance similarities across individuals.
@@ -243,10 +243,10 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/Obs_MR_scatter_without_top8
 
 ```
 
-### Sensitivity analysis of BMI protein MR effects
-Summary statistics from Sun et al. were available for six of the eight proteins determined as showing evidence for a causal relationship with BMI. These were available for FABP4, leptin, FAAA, INHBC, PILR-AA-NP and PTPRD, but not for Complement C5 and SHBG. FAAA, INHBC, Complement C5, SHBG and PILR-AA-NP had pQTLs, but of these only the pQTL for FAAA was within ± 1 Mb of a BMI SNP. A summary of this is provided in Table \@ref(tab:pQTLs).
+### Sensitivity analysis
+A sensitivity analysis was performed to try to establish whether BMI-protein effects are arising due to SNPs in the BMI GRS being in close proximity to the genes which encode the protein outcomes. This was performed by doing a two sample MR analysis. Summary statistics from Sun et al. were available for six of the eight proteins determined as showing evidence for a causal relationship with BMI. These were available for FABP4, leptin, FAAA, INHBC, PILR-AA-NP and PTPRD, but not for Complement C5 and SHBG. FAAA, INHBC, Complement C5, SHBG and PILR-AA-NP had pQTLs, but of these only the pQTL for FAAA was within ± 1 Mb of a BMI SNP. A summary of this is provided in Table \@ref(tab:pQTLs).
 
-(ref:caption-pQTLs) **Summary of proteins which have summary statistics available in Sun et al.[@Sun2018], proteins which have cis pQTLs and which pQTLs are within 1 Mb from a BMI SNP**. Any SNPs which need to removed as a sensitivity analysis are highlighted.
+(ref:caption-pQTLs) **Summary of proteins which have summary statistics available in Sun et al.[@Sun2018], proteins which have cis pQTLs and which pQTLs are within 1 Mb from a BMI SNP**. Any SNPs which need to removed as a sensitivity analysis are highlighted. FABP4 = Fatty acid binding protein 4, FAAA = fumarylacetoacetase, PTPRD = Receptor-type tyrosine-protein phosphatase delta, INHBC = Inhibin beta C chain, SHBG = sex hormone binding globulin, PILR A-A NP = PILR alpha-associated neural protein. 
 (ref:scaption-pQTLs) Summary of proteins which have summary statistics available in Sun et al.[@Sun2018], proteins which have cis pQTLs and which pQTLs are within 1 Mb from a BMI SNP
 ```{r pQTLs,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -267,7 +267,7 @@ mytable %>% kable(caption = "(ref:caption-pQTLs)", booktabs = TRUE, caption.shor
   landscape()
 ```
 
-In general, the IVW two-sample MR estimates for BMI and plasma protein levels were similar in direction to the one sample MR estimates and provided evidence for a causal relationship with BMI (Figure \@ref(fig:two-sample-forest)). These estimates, along with the MR-Egger, weighted median and weighted mode estimates, are presented in Table \@ref(tab:Two-sample). There was consistency across MR Egger, IVW, weighted median and weighted mode MR results for all proteins except INHBC, where the weighted mode estimate attenuated to the null. There was weak evidence for heterogeneity with leptin and PTPRD, however there was no evidence for horizontal pleiotropy as the MR Egger intercepts were all close to zero (P>0.05 for the Egger intercept). The single SNP analysis and leave-one-out analysis results are presented in Supplementary Tables 11 and 12. Removing one SNP at a time did not affect the overall IVW estimate for any protein.
+In general, the IVW two-sample MR estimates for BMI and plasma protein levels displayed the same direction of effect to the one sample MR estimates and provided evidence for a causal relationship with BMI (Figure \@ref(fig:two-sample-forest)). These estimates, along with the MR-Egger, weighted median and weighted mode estimates, are presented in Table \@ref(tab:Two-sample). There was consistency across MR Egger, IVW, weighted median and weighted mode MR results for all proteins except INHBC, where the weighted mode estimate attenuated to the null. There was weak evidence for heterogeneity with leptin and PTPRD, however there was no evidence for horizontal pleiotropy as the MR Egger intercepts were all close to zero (P>0.05 for the Egger intercept). The single SNP analysis and leave-one-out analysis results are presented in Supplementary Tables 11 and 12. Removing one SNP at a time did not affect the overall IVW estimate for any protein.
 
 (ref:caption-two-sample-forest) **Forest plot of the IVW two sample Mendelian randomisation estimates for the effect of BMI on circulating proteins**. Proteins presented are those that had evidence from the one sample MR that BMI had a causal effect on circulating levels. FABP4 = Fatty acid binding protein 4, FAAA = fumarylacetoacetase, INHBC = inhibin beta C chain, PILR A-A NP = PILR alpha-associated neural protein, PTPRD = Receptor-type tyrosine-protein phosphatase delta.
 
@@ -300,7 +300,7 @@ Egger_intercept <- c('4.89E-03',NA,NA,NA,'3.89E-03',NA,NA,NA,'1.74E-03',NA,NA,NA
 SE <- c('2.86E-03',NA,NA,NA,'2.93E-03',NA,NA,NA,'2.82E-03',NA,NA,NA,'2.97E-03',NA,NA,NA,'2.92E-03',NA,NA,NA,'2.98E-03',NA,NA,NA)
 Pval <- c('8.71E-02',NA,NA,NA,'1.85E-01',NA,NA,NA,'5.38E-01',NA,NA,NA,'6.29E-01',NA,NA,NA,'2.70E-01',NA,NA,NA,'1.56E-01',NA,NA,NA)
 mytable = data.frame(cbind(Exposure, Outcome, OutcomeID, Method, N_SNP, Beta_coefficient, SE, Pval, Q, Q_df, Q_pval, Egger_intercept, SE, Pval))
-colnames(mytable) <- c('Exposure',	'Outcome',	'Outcome ID',	'Method',	'N SNP',	'Beta coefficient',	'SE',	'Pval',	'Q',	'Q df',	'Q pval',	'Egger intercept',	'SE',	'Pval')
+colnames(mytable) <- c('Exposure',	'Outcome',	'Outcome ID',	'Method',	'N SNP',	'Beta coefficient',	'SE',	'Pval',	'Q',	'Q df',	'Q pval',	'Egger intercept',	'SE',	'Egger intercept Pval')
 mytable %>% kable(caption = "(ref:caption-Two-sample)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Two-sample)") %>% 
   kable_classic_2(full_width = F, font_size = 6.7) %>%
  kable_styling(full_width = TRUE) %>%
@@ -309,7 +309,7 @@ mytable %>% kable(caption = "(ref:caption-Two-sample)", booktabs = TRUE, format 
   landscape()
 ```
 
-Only the cis pQTL for FAAA was within 1 Mb of a BMI SNP (\@ref(tab:pQTLs)). After removal of the corresponding BMI SNP, the causal effects were re-estimated. Figure \@ref(fig:FAA-forest) displays the comparison of MR estimates for the effect of BMI on FAAA, with and without rs12593036 as an instrument for BMI. There was still no evidence for heterogeneity (Q p-value = 0.08) or horizontal pleiotropy (MR Egger intercept p-value = 0.19). This comparison indicates that tMR estimates are unchanged even if the BMI SNP which is near the gene that encodes FAAA is included in the genetic instrument for BMI.
+Only the cis pQTL for FAAA was within 1 Mb of a BMI SNP (Table \@ref(tab:pQTLs)). After removal of the corresponding BMI SNP, the causal effects were re-estimated. Figure \@ref(fig:FAA-forest) displays the comparison of MR estimates for the effect of BMI on FAAA, with and without rs12593036 as an instrument for BMI. There was still no evidence for heterogeneity (Q p-value = 0.08) or horizontal pleiotropy (MR Egger intercept p-value = 0.19). This comparison indicates that MR estimates are unchanged even if the BMI SNP which is near the gene that encodes FAAA is included in the genetic instrument for BMI.
 
 (ref:caption-FAAA-forest) **Forest plot comparing the MR estimate for the effect of BMI on circulating levels of fumarylacetoacetase, with and without BMI SNPs near the fumarylacetoacetase (FAAA) cis pQTL**. 
 (ref:scaption-FAAA-forest) Forest plot comparing the MR estimate for the effect of BMI on circulating levels of fumarylacetoacetase (FAAA), with and without BMI SNPs near the fumarylacetoacetase cis pQTL
