--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -38,7 +38,7 @@ The two previous results chapters (Chapter \@ref(BMI-protein-MR) and Chapter \@r
 This overall shift in proteins in each study design provides important information. One of the benefits of having the same proteomics platform in both studies is that there is a large overlap in the number of proteins measured, therefore the MR estimate and RCT estimate can be directly compared. A comparison across the two studies also helps to overcome the biases and limitations of each approach, and both the concordance and divergence in effects across studies provides insight into possible mechanisms. The overall aim of this chapter was to compare BMI-protein effects across MR and RCT study designs and evaluate implications for platelet function and CVD.
 
 ## Methods
-In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. The estimate in INTERVAL is the mean difference in protein levels per SD higher BMI in a cross-sectional framework, whereas the estimate in DiRECT is the SD change in protein levels after weight loss. Due to the nature of the output of linear regression, the beta coefficient is the SD change in protein per SD increase in BMI (therefore if weight loss reduces the protein, the beta coefficient is positive). To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. This function subtracts the mean from each value and divides by the standard deviation. Estimates were categorised as: "same" if the scaled estimates were within 1 SD of each other; "different" if estimates were more than 1 SD apart and "extreme" if within 1 SD of each other and with an absolute scaled estimate of more than 1 SD. Estimates from both studies were scaled as the beta coefficients for the regression analyses were using different units (INTERVAL units are SD difference in protein per SD higher BMI in a cross-sectional setting, whereas DiRECT is SD change in protein per SD increase in BMI).
+In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. The estimate in INTERVAL is the mean difference in protein levels per SD higher BMI in a cross-sectional framework, whereas the estimate in DiRECT is the SD change in protein levels after weight loss. Due to the nature of the output of linear regression, the beta coefficient is the SD change in protein per SD increase in BMI (therefore if weight loss reduces the protein, the beta coefficient is positive). To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. This function subtracts the mean from each value and divides by the standard deviation. Estimates were categorised as: "same" if the scaled estimates were within 1.5 SD of each other; "different" if estimates were more than 1.5 SD apart and "extreme" if within 1.5 SD of each other and with an absolute scaled estimate of more than 1 SD. Estimates from both studies were scaled as the beta coefficients for the regression analyses were using different units (INTERVAL units are SD difference in protein per SD higher BMI in a cross-sectional setting, whereas DiRECT is SD change in protein per SD increase in BMI).
 
 Estimates for the specific proteins involved in platelet GO pathways highlighted in Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) (Supplementary Table 1 https://github.com/lucygoudswaard/mythesis/blob/master/index/figure/BMI_protein_INTERVAL/BMI_protein_supplementary_Tables.xlsx) were also extracted to evaluate the effect of BMI on platelet proteins. Estimates were extracted from the MR in INTERVAL and for the two stage least squares analysis in DiRECT as these were the most robust models.
 
@@ -46,7 +46,7 @@ The comparison of the magnitude of estimates across studies conveys important in
 
 ## Results
 ### Comparison of BMI effects across DiRECT and INTERVAL
-The proteins with causal evidence in the MR analysis from Chapter \@ref(BMI-protein-MR) were explored in the RCT results. Out of the eight unique proteins in INTERVAL, five of them were in the DiRECT SomaLogic panel. These were fumarylacetoacetase (FAH), Inhibin beta C chain (INHBC), Complement C5, SHBG and PILR. Three of these displayed consistent estimates across studies, whereas Complement C5 and PILR were not associated with BMI change in DiRECT (Figure \@ref(fig:DiRECT-INTERVAL-signif)).
+The proteins with causal evidence in the MR analysis from Chapter \@ref(BMI-protein-MR) were explored in the RCT results. Out of the eight unique proteins in INTERVAL, five of them were in the DiRECT SomaLogic panel. These were fumarylacetoacetase (FAAA), Inhibin beta C chain (INHBC), Complement C5, SHBG and PILR. Three of these displayed consistent estimates across studies, whereas Complement C5 and PILR were not associated with BMI change in DiRECT (Figure \@ref(fig:DiRECT-INTERVAL-signif)).
 
 (ref:scaption-DiRECT-INTERVAL-signif) Forest plot comparing the protein effect estimates in INTERVAL and DiRECT (where there was MR evidence for a causal effect)
 (ref:caption-DIRECT-INTERVAL-signif) **Forest plot comparing the protein effect estimates in INTERVAL and DiRECT (where there was MR evidence for a causal effect)**. Proteins presented are the only proteins out of the top eight that were detected in DiRECT.
