--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -65,7 +65,7 @@ It is unclear how these associations fit together and whether they are truly par
 ## Strengths 
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. Orthogonal evidence is when findings are replicated more than one study design. This thesis has provided orthogonal evidence such as through use of MR along with a weight loss RCT to determine effects of BMI on the plasma proteome. This is therefore a major strength of the current research. Using a combination of study designs is crucial to determine causal effects as each technique has its own set of strengths and limitations.
 
-One of the benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). Instead of developing an animal study, I have created a patient study and have also found data sets which have the required variables to address my hypotheses (replacement). It is often the case that animal studies may be developed when researchers are not aware of human data sets. Some of the advantages of using human data sets for this research is that humans are able to consent and able to donate large blood volumes, without it being lethal. However, it is important to note that animal studies have their advantages. Analyses using human data sets are often limited by confounding factors such as lifestyle choices (such as smoking, drinking, eating habits). Within an animal experiment such as exploring the effect of obesity on platelet function in mice, there is the ability to give a normal diet to half of the mice, while providing the other half with a high fat diet. This can be done while keeping other environmental factors the same. These experiments can therefore help determine causality.
+One of the benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). Instead of developing an animal study, I have created a patient study and have also found data sets which have the required variables to address my hypotheses (replacement). It is often the case that animal studies may be developed when researchers are not aware of human data sets. Some of the advantages of using human data sets for this research is that humans are able to consent and able to donate large blood volumes, without it being lethal. However, it is important to note that animal studies have their advantages. Analyses using human data sets are often limited by confounding factors such as lifestyle choices (such as smoking, drinking, eating habits). Within an animal experiment such as exploring the effect of obesity on platelet function in mice, there is the ability to give a normal diet to half of the mice, while providing the other half with a high fat diet. This can be done while keeping other environmental factors the same. These experiments can therefore help determine effects driven by adiposity.
 
 ## Limitations
 The limitations in this section are ordered by results chapter.
